--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-redux": "^7.1.24",
     "react": "17.0.2",
