--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'MoneyManager' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+
   target 'MoneyManagerTests' do
     inherit! :complete
     # Pods for testing
