--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.24",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-pie-chart": "^2.0.2",
     "react-native-reanimated": "^2.9.1",
