--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-color-picker": "^0.6.0",
