--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "money_manager",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.2",
+    "i18next": "^22.0.2",
     "react": "17.0.2",
+    "react-i18next": "^12.0.0",
     "react-native": "0.68.2",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "^2.5.0",
