--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -262,6 +262,7 @@ android {
 dependencies {
     implementation 'com.facebook.fresco:fresco:2.0.0'
     implementation 'com.facebook.fresco:animated-gif:2.5.0'
+    implementation project(':react-native-splash-screen')
     
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
