--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.4.4",
     "react-native-yandex-ads": "^0.2.1",
     "react-redux": "^8.0.2"
