--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-transform-arrow-functions": "^7.18.6",
+    "@babel/plugin-transform-shorthand-properties": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -23,10 +27,11 @@
     "react": "17.0.2",
     "react-i18next": "^12.0.0",
     "react-native": "0.68.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
-    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-google-mobile-ads": "^8.2.2",
     "react-native-navigation-bar-color": "^2.0.1",
-    "react-native-pie-chart": "^2.0.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-restart": "0.0.24",
     "react-native-safe-area-context": "^4.3.1",
